--- a/life.html
+++ b/life.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Naukite/life-game/main/life.css">
+    <link rel="stylesheet" href="life.css">
     <script src="life.js"></script>
     <title>Life</title>
 </head>
